--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 .apresentacao__conteudo__titulo {
-    font-size: 2.2vw;
+    font-size: 1.5rem;
     font-family: var(--fonte-courier-new);
     
 }
@@ -82,7 +82,7 @@ body {
     color: var(--cor-texto);
     font-family: var(--fonte-montserrat);
     font-weight: 400;
-    font-size: 1.5vw;
+    font-size: 1.5rem;
 }
 
 .apresentacao__links--navegacao {
