--- a/styles/about.css
+++ b/styles/about.css
@@ -36,7 +36,7 @@ body {
 .cabecalho__menu--link {
     color: var(--cor-destaque);
     font-family: var(--fonte-montserrat);
-    font-size: 2.2vh;
+    font-size: 1.3rem;
     text-decoration: none;
 }
 
