--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@ body {
 .cabecalho__menu--link {
     color: var(--cor-destaque);
     font-family: var(--fonte-montserrat);
-    font-size: 2.2vh;
+    font-size: 1.3rem;
     text-decoration: none;
 }
 
