--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,10 @@ body {
     text-decoration: none;
 }
 
+.cabecalho__menu--link:hover {
+    text-decoration: underline;
+}
+
 .apresentacao {
     padding: 3% 15%;
     display: flex;
