--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,8 @@
     --cor-texto: white;
     --cor-fundo: black;
     --cor-destaque: aqua;
-    --fonte-courier-new: 'Courier New', Courier, monospace;
-    --fonte-montserrat: 'Montserrat', sans-serif;
-    --fonte-raleway: 'Raleway', sans-serif;
+    --fonte-montserrat: 'Montserrat';
+    --fonte-raleway: 'Raleway';
 }
 
 * {
@@ -60,7 +59,7 @@ body {
 
 .apresentacao__conteudo__titulo {
     font-size: 1.5rem;
-    font-family: var(--fonte-courier-new);
+    font-family: var(--fonte-montserrat);
     
 }
 
@@ -124,7 +123,7 @@ body {
 }
 
 .rodape {
-    font-family: var(--fonte-courier-new);
+    font-family: var(--fonte-montserrat);
     color: rgb(161, 161, 161);
 }
 
